# company-technology-genealogy

./: README.md  pyproject.toml
.github/workflows/: deploy_pages.yml
docs/: data.json  index.html  stats.json
domains/: anthropic.yaml  applied_intuition.yaml  aurora_argo.yaml  boston_dynamics.yaml  comma_momenta.yaml  cruise.yaml  figure_humanoids.yaml  google_deepmind.yaml  horizon_robotics.yaml  industrial_robots.yaml  lidar_companies.yaml  meta_fair.yaml  mobileye.yaml  nvidia_drive.yaml  openai.yaml  physical_intelligence.yaml  ponyai_weride.yaml  slam_companies.yaml  surgical_robots.yaml  tesla.yaml  tieriv_autoware.yaml  unitree_agility.yaml  waymo.yaml  wayve.yaml  xai_mistral_deepseek.yaml  zoox_nuro.yaml
scripts/: build_site.py  build_stats.py
